assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Oswald&family=Roboto&display=swap');

body {
    background-color: #702500;
    color: #FFF0B8;
    font-family: 'Roboto', sans-serif;
    padding-left: 5%;
    padding-right: 5%;
}

h1 {
    font-family: 'Oswald', sans-serif;
    text-transform: uppercase;
    margin-block-start: 0;
}

/* Navigation menu styles */

.page-title, #menu {
    line-height: 50px;
}

.page-title {
    float: left;
    margin-left: 0.5%;
    color: #FFF0B8;
}

#menu {
    float: right;
    width: 50%;
    margin-block-start: 0;
}

#menu ul {
    padding-inline-start: 0;
    margin-block-start: 0;
    display: flex;
    justify-content: flex-end;
}

#menu li {
    display: inline;
    padding: 0 2% 0 2%;
}

#menu a {
    text-decoration: none;
    color: #FFF0B8;
}

#menu a:hover {
    font-weight: bold;
}

/* Hero image styles*/

#hero-image {
    clear: both;
}

#hero-image img {
    width: 100%;
    object-fit: cover;
    max-width: 100%;
    max-height: 100%;
    display: block;
}


/* Introduction section styles */

#intro-section {
    height: 300px;
    width: 100%;
    padding-top: 20px;
}

#welcome {
    text-transform: uppercase;
}

#intro-text {
    width: 60%;
    float: left;
    display: inline;
}

#intro-video {
    width: 40%;
    float: right;
    display: inline;
    display: flex;
    justify-content: right;
}

iframe {
    border: 0;
}

/* Menu of sections styles */

#section-menu {
    clear: both;
    height: 375px;
    padding-top: 10px;
}

.section-box {
    position: relative;
    width: 25%;
    height: 300px;
    float: left;
    display: inline;
}

.section-box img {
    max-width: 100%;
    max-height: 100%;
    display: block;
}

.caption {
    position: absolute;
    bottom: 30px;
    left: 16px;
    background-color: rgba(71, 71, 71, 0.5);
    color: #FFF0B8;
    text-transform: uppercase;
    font-size: x-large;
}

.section-box:hover img {
    opacity: 0.3;
}

/* Footer styles */

footer {
    clear:both;
    background-color: #474747;
    color: white;
    height: 50px;
    text-align: center;
    padding-top: 1px;
    width: 100%;
    margin: 0;
}

 /* Sub-page styles*/

.section-info {
    height: 300px;
    width: 100%;
    padding-top: 20px;
}

.section-info-title {
    text-transform: uppercase;
}

.section-text {
    width: 60%;
    float: left;
    display: inline;
}

.section-instruments {
    width: 35%;
    float: right;
    display: inline;
    justify-content: left;
    padding-left: 10px;
}

.instruments-table {
    border: 1px solid black;
    width: 100%;
    border-collapse: collapse;
}

.instruments-table th {
    text-align: left;
}

.instruments-table th, td {
    border: 1px solid black;
    padding: 5px 0 5px 15px;
}

.section-videos {
    clear: both;
    padding-top: 10px;
}

/* Media queries for smaller screens */

@media (max-width: 1200px) {
    .page-title {
        clear: both;
        padding:0;
        margin-block-end: 0;
    }
   
    #menu {
        float: left;
        width: 100%;
        padding: 0;
    }
    
    #menu ul {
        justify-content: flex-start;
    }

    #menu li {
        text-align: left;
    }

    #intro-section {
        display: block;
    }

    #intro-text {
        width: 100%;
    }

    #intro-video {
        width: 100%;
        display: flex;
        justify-content: left;
    }

    #section-menu {
        height: auto;
    }

    .section-box {
        width: 100%;
        clear: both;
    }

    .section-text {
        width: 100%;
    }

    .section-instruments {
        width: 100%;
    }
  }

 /* Media queries for mobiles */

 @media (max-width: 580px) {

    body {
        padding: 0;
    }

    p {
        font-size: large;
        line-height: 24px;
    }
    
    th, td {
        font-size: large;
    }

    iframe {
        width: 100%;
    }

    nav li {
        font-size: small;
    }
 }

